crates/aranya-policy-compiler/tests/data/actions/duplicate_name_already_defined.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: the name `foo` is defined multiple times
  |
1 | action foo() {}
  |        --- previous defintion here
2 | action bar() {}
3 | action foo() {}
  |        ^^^ re-defined here
